# SimpleITK-MICCAI-2011-Tutorial

./: .gitignore  Readme.md
Examples/: BasicTutorial1.py  Demos.py
Examples/AdvancedTutorial/: CMakeLists.txt
Examples/AdvancedTutorial/Java/: Example.groovy
Examples/AdvancedTutorial/SimpleGaussian/: SimpleGaussian.cxx  SimpleGaussian.java  SimpleGaussian.lua
Examples/AdvancedTutorial/ToITK/: CMakeLists.txt  ToITK.cxx  ToITKSolution.cxx
Examples/AdvancedTutorial/ToOpenCV/: CMakeLists.txt  ToOpenCV.cxx  ToOpenCVSolution.cxx
Examples/AdvancedTutorial/ToOpenCVAndBack/: CMakeLists.txt  ToOpenCVAndBack.cxx  ToOpenCVAndBackSolution.cxx
Examples/BasicTutorial1/: 00-Image.py  01-InputOutput.py  01-MemoryManagement.py  Image.py  InputOutput.py  MemoryManagement.py
Examples/BasicTutorial2/: 00-Filters.py  01-Morphology.py  Filters.py  Morphology.py
Examples/InteractiveTutorial/: 00-Operators.py  01-CannyEdge.py  05-01-BoarderChange.py
Presentation/: 00-About.tex  01-VirtualMachinePreparation.tex  02-Introduction.tex  03-BasicTutorials1.tex  04-BasicTutorials2.tex  05-IntermediateTutorials.tex  06-AdvancedTopics.tex  07-WrapUp.tex  Diagrams.pptx  ListingSupport.tex  SimpleITK-MICCAI-2011.tex
Presentation/Code/: DiscreteGaussianFilter.cxx  DiscreteGaussianFilter.py  ITKTemplateSample.cxx  SimpleITKTemplatelessSample.cxx
Presentation/Images/: UbuntuDesktopExplanation.acorn
Setup/: Readme.md  RootScripts.sh  UserScripts.sh
